[gd_scene load_steps=4 format=3 uid="uid://b3fkwuxm2q78k"]

[ext_resource type="Texture2D" uid="uid://dhr2nau1nmul8" path="res://graphics/player/player.png" id="1_7rjd5"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_vl18a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y5w6t"]
radius = 67.4759

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_vl18a")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(0, -35)
texture = ExtResource("1_7rjd5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_y5w6t")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
